--- a/themes/comite/pages/register.htm
+++ b/themes/comite/pages/register.htm
@@ -1,5 +1,5 @@
-title = "login"
-url = "/login"
+title = "register"
+url = "/register"
 layout = "default"
 is_hidden = 0
 
@@ -10,14 +10,12 @@ forceSecure = 0
 requirePassword = 0
 ==
 <div class="col-md-8">
-    
+
     <div class="row">
 
         <div class="col-md-12">
-            <h3>Sign in</h3>
-            {% partial account ~ '::signin' %}
+            {% partial account ~ '::register' %}
         </div>
-        
-    </div>
 
+    </div>
 </div>
