--- a/themes/comite/pages/category-page.htm
+++ b/themes/comite/pages/category-page.htm
@@ -7,7 +7,7 @@ is_hidden = 0
 pageNumber = "{{ :page }}"
 categoryFilter = "{{ :slug }}"
 postsPerPage = 10
-noPostsMessage = "No posts found"
+noPostsMessage = "No se Encontraron Posts"
 sortOrder = "published_at desc"
 categoryPage = "category-page"
 postPage = "blog-post"
