--- a/themes/comite/pages/register.htm
+++ b/themes/comite/pages/register.htm
@@ -30,7 +30,7 @@ requirePassword = 0
                     </div>
 
                     <div class="form-group">
-                        <label for="registerEmail">Email</label>
+                        <label for="registerEmail">Correo Electrónico</label>
                         <input
                             name="email"
                             type="email"
@@ -61,7 +61,7 @@ requirePassword = 0
                             placeholder="Ingresa una contraseña" />
                     </div>
 
-                    <button type="submit" class="btn btn-success">Register</button>
+                    <button type="submit" class="btn btn-success">Registrarse</button>
 
                 {{ form_close() }}
             {% else %}
