--- a/themes/comite/pages/search-result.htm
+++ b/themes/comite/pages/search-result.htm
@@ -11,6 +11,9 @@ hightlight = 0
 postsPerPage = 5
 noPostsMessage = "No se encontraron posts"
 sortOrder = "published_at desc"
+includeCategories[] = 1
+includeCategories[] = 3
+includeCategories[] = 5
 categoryPage = "category-page"
 postPage = "blog-post"
 ==
