--- a/themes/comite/pages/home.htm
+++ b/themes/comite/pages/home.htm
@@ -15,6 +15,8 @@ postPage = "blog-post"
 ==
 <div class="col-12 col-md-8 col-xl-8">
 
+    <p>"{{ this.page.id }}"</p>
+
     {% set posts = blogPosts.posts %}
 
     {% for post in posts %}
