change in traduction

--- a/themes/comite/pages/search-result.htm
+++ b/themes/comite/pages/search-result.htm
@@ -9,7 +9,7 @@ searchTerm = "{{ :search }}"
 pageNumber = "{{ :page }}"
 hightlight = 0
 postsPerPage = 4
-noPostsMessage = "No se encontraron posts"
+noPostsMessage = "No se encontraron publicaciones"
 sortOrder = "published_at desc"
 includeCategories[] = 1
 includeCategories[] = 3
